Fix sizing on mobile

--- a/static/stylesheets/imports/_main.scss
+++ b/static/stylesheets/imports/_main.scss
@@ -54,7 +54,7 @@ text set in the data-text attribute. */
 .glitch {
 	position: relative;
 	color: white;
-	font-size: 4em;
+	font-size: min(7vw, 4em);
 	letter-spacing: .5em;
 	/* Animation provies a slight random skew. Check bottom of doc
 	for more information on how to random skew. */
